my_persistent_volume_claim.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  volumes:
    - name: my-pv-volume
      persistentVolumeClaim:
       claimName: my-db-pvc-wks59344
  containers:
  - name: my-container
    image: rockylinux:8
    command: ["/bin/sh"]
    args: ["-c", "while true; do sleep 10; done"]
    volumeMounts:
      - mountPath: "/persistent_data"
        name: my-pv-volume
    resources:
      limits:
        cpu: "1"
        memory: 2Gi
