my_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-rockylinux-pod
spec:
  containers:
  - name: my-container
    image: rockylinux:8
    command: ["/bin/sh"]
    args: ["-c", "while true; do sleep 10; done"]
    resources:
      limits:
        cpu: "1"
        memory: 300M
