my_loadbalancer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: LoadBalancer
  loadBalancerIP: 172.23.168.222 #optional field for a specific IP. You can omit this
  externalTrafficPolicy: Cluster
