my_ingress_large_file.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress-with-annotations
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10M"
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port: 
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service: 
            name: coffee-svc
            port: 
              number: 80
